# football-market-efficiency

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: README.md
notebooks/: 01_main_pooled_l2_100_edge_analysis.ipynb  02_pooled_regularization_comparison.ipynb  03_ev_bucket_diagnostics.ipynb  04_league_specific_baseline.ipynb  05_consensus_kelly_staking.ipynb  06_two_sided_market_efficiency.ipynb  07_feature_incremental_value.ipynb  08_monthly_recalibration_window_robustness.ipynb  README.md
src/football_edge/: __init__.py  backtest.py  config.py  data.py  features.py  model.py  plotting.py  staking.py  two_sided.py
tests/: test_backtest.py  test_data.py  test_features.py  test_integration.py  test_model.py  test_plotting.py  test_staking.py  test_two_sided.py
